<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/startingballetwelcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startingballethomepage" />

    <TextView
        android:id="@+id/startingballetwelcomelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startingballetwelcometext"
        android:text="@string/startingballethomepagelist" />

    <Button
        android:id="@+id/btn_checklistmale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startingballetwelcomelist"
        android:layout_centerHorizontal="true"
        android:text="@string/btnmalechecklist" />

    <Button
        android:id="@+id/btn_checklistfemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_checklistmale"
        android:layout_centerHorizontal="true"
        android:text="@string/btnfemalechecklist" />

    <com.davetriesballet.DTB.ExpandableTextView
        android:id="@+id/testexpandabletext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_checklistfemale" />

</RelativeLayout>