<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/img_firstImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/dtblogo"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_firstImage"
        android:text="@string/dtbwelcome" />

    <Button
        android:id="@+id/btn_blogpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcometext"
        android:layout_alignLeft="@+id/welcometext"
        android:text="@string/dtbsitebutton"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_sendEmailToDTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_blogpage"
        android:layout_below="@+id/welcometext"
        android:layout_centerInParent="true"
        android:text="@string/emaildtbbutton"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/btn_blogpage" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/introductiontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dtbintroduction" />

            <ImageView
                android:id="@+id/img_dtbSignature"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@+id/introductiontext"
                android:contentDescription="@string/dtblogo"
                android:scaleType="centerInside"
                android:src="@drawable/dtb_signature" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>